--- a/LibrarrySystem/Views/Shared/_Layout.cshtml
+++ b/LibrarrySystem/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             <i class="fa-solid fa-tent-arrow-left-right"></i>
             <span>Transaction</span>
         </a>
-        <a asp-action="Privacy" asp-controller="Home">
+        <a asp-action="Login" asp-controller="Maintenance">
             <i class="fa-solid fa-info-circle"></i>
             <span>About</span>
         </a>
