--- a/LibrarrySystem/Views/Maintenance/Login.cshtml
+++ b/LibrarrySystem/Views/Maintenance/Login.cshtml
@@ -1,22 +1,34 @@
-﻿@{
+﻿@model LibrarrySystem.Models.LoginData
+@{
     ViewData["Title"] = "Login Page";
     Layout = "_LayoutLogin";
 }
 
 <div class="center">
     <h1>Login</h1>
-    <form method="post">
+    <form asp-action="LoginUser" method="post">
         <div class="txt_field">
-            <input type="text" required />
+            <input asp-for="UserID" type="text" required />
             <span></span>
             <label>Username</label>
         </div>
         <div class="txt_field">
-            <input type="text" required />
+            <input asp-for="Password" type="text" required />
             <span></span>
             <label>Password</label>
         </div>
-        <div class="pass">Forgot Password</div>
-        <input type="submit" value="Login" />
+        <div>
+            <label id="err"></label>
+        </div>
+        <button type="submit">Login</button>
     </form>
 </div>
+
+@{if(TempData["msg"] != null)
+    {
+    <script>
+            alert('@TempData["msg"]')
+
+    </script>
+    }
+}
