--- a/LibrarrySystem/wwwroot/css/site.css
+++ b/LibrarrySystem/wwwroot/css/site.css
@@ -1,96 +1,104 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
-body {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
     font-family: "Josefin Sans", sans-serif;
 }
 
-header {
-    position: fixed;
-    background: #22242A;
-    padding: 20px;
-    width: 100%;
-    height: 70px;
+body {
+    background: #f3f5f9;
 }
 
-header .right_area a{
-    color: #fff;
-}
-
-.left_area {
-    color: #fff;
-    margin: 0;
-    text-transform: uppercase;
-    font-size: 22px;
-    font-weight: 900;
-}
-
-.right_area {
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 900;
-    float: right;
-    margin-top: -40px;
-    margin-right: 40px;
-    transition: 0.5s;
-}
-
-.logout_btn {
-    text-decoration: none;
-    color: #fff;
+.wrapper {
+    display: flex;
+    position: relative;
 }
 
 
-.sidebar {
-    background: #2F323A;
-    margin-top: 70px;
-    padding-top: 30px;
-    position: fixed;
-    left: 0;
-    width: 250px;
-    height: 100%;
-    transition: 0.5s;
-    transition-property: left;
-}
+    .wrapper .sidebar {
+        position: fixed;
+        width: 250px;
+        height: 100vh;
+        background: #2F323A;
+        padding: 30px 0;
+    }
 
-    .sidebar .profile_image {
-        width: 100px;
-        height: 100px;
+        .wrapper .sidebar h2 {
+            color: #fff;
+            text-transform: uppercase;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .wrapper .sidebar ul{
+        }
+
+        .wrapper .sidebar ul li {
+            padding-top: 10px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid rgba(0,0,0,0.05);
+            border-top: 1px solid rgba(255,255,255,0.05);
+        }
+            .wrapper .sidebar ul li i{
+                margin-right: 10px;
+            }
+
+            .wrapper .sidebar ul li a {
+                color: #ccc;
+                display: block;
+                text-decoration: none;
+            }
+
+                .wrapper .sidebar ul li a .fas {
+                    color: #ccc;
+                    display: block;
+                }
+
+            .wrapper .sidebar ul li:hover {
+                background: #594f8d;
+            }
+
+                .wrapper .sidebar ul li:hover a {
+                    color: #fff;
+                }
+
+    .wrapper .main_content {
+        width: 100%;
+        margin-left: 250px;
+    }
+
+        .wrapper .main_content .header {
+            padding: 20px;
+            background: #fff;
+            color: #717171;
+            border-bottom: 1px solid #e0e4e8;
+        }
+
+            .wrapper .main_content .header a {
+                background: #fff;
+                color: #717171;
+            }
+
+    .wrapper .sidebar .profile_image {
+        width: 150px;
+        height: 150px;
         border-radius: 100px;
         margin-bottom: 10px;
     }
 
-    .sidebar h4 {
+    .wrapper .sidebar h4 {
         color: #ccc;
         margin-top: 0;
         margin-bottom: 20px;
     }
 
-    .sidebar a {
-        color: #fff;
-        display: block;
-        width: 100%;
-        line-height: 60px;
-        text-decoration: none;
-        padding-left: 40px;
-        box-sizing: border-box;
-        transition: 0.5s;
-    }
-
-    .sidebar a:hover {
-        background: #19B3D3;
-    }
-
-    .sidebar i {
-        padding-right: 10px;
-    }
-
 .body_container {
-    padding: 80px 5px 5px 5px;
-    margin-left: 250px;
+    padding: 5px;
     height: 100vh;
     transition: 0.5s;
+    background-color: #fff;
 }
