--- a/LibrarrySystem/wwwroot/css/site.css
+++ b/LibrarrySystem/wwwroot/css/site.css
@@ -18,83 +18,22 @@ body {
     position: relative;
 }
 
-
-    .wrapper .sidebar {
-        position: fixed;
-        width: 250px;
-        height: 100vh;
-        background: #2F323A;
-        padding: 30px 0;
-    }
-
-        .wrapper .sidebar h2 {
-            color: #fff;
-            text-transform: uppercase;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .wrapper .sidebar ul{
-        }
-
-        .wrapper .sidebar ul li {
-            padding-top: 10px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid rgba(0,0,0,0.05);
-            border-top: 1px solid rgba(255,255,255,0.05);
-        }
-            .wrapper .sidebar ul li i{
-                margin-right: 10px;
-            }
-
-            .wrapper .sidebar ul li a {
-                color: #ccc;
-                display: block;
-                text-decoration: none;
-            }
-
-                .wrapper .sidebar ul li a .fas {
-                    color: #ccc;
-                    display: block;
-                }
-
-            .wrapper .sidebar ul li:hover {
-                background: #594f8d;
-            }
-
-                .wrapper .sidebar ul li:hover a {
-                    color: #fff;
-                }
-
-    .wrapper .main_content {
+ .main_content {
         width: 100%;
         margin-left: 250px;
     }
 
-        .wrapper .main_content .header {
+.main_content .header {
             padding: 20px;
             background: #fff;
             color: #717171;
             border-bottom: 1px solid #e0e4e8;
         }
 
-            .wrapper .main_content .header a {
+ .main_content .header a {
                 background: #fff;
                 color: #717171;
             }
-
-    .wrapper .sidebar .profile_image {
-        width: 150px;
-        height: 150px;
-        border-radius: 100px;
-        margin-bottom: 10px;
-    }
-
-    .wrapper .sidebar h4 {
-        color: #ccc;
-        margin-top: 0;
-        margin-bottom: 20px;
-    }
 
 .body_container {
     padding: 5px;
