Update 08-29-2022 sidebar update

--- a/LibrarrySystem/Views/Home/Index.cshtml
+++ b/LibrarrySystem/Views/Home/Index.cshtml
@@ -2,7 +2,107 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container mt-4">
+
+    <div class="dashboard">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-8">
+                                <h5 class="card-title">Student Registered</h5>
+                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                            </div>
+                            <div class="col-sm-4 d-flex justify-content-center align-items-center">
+                                <h1 class="card-text" style="font-size: 80px">40</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-8">
+                                <h5 class="card-title">Total Borrower</h5>
+                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                            </div>
+                            <div class="col-sm-4 d-flex justify-content-center align-items-center">
+                                <h1 class="card-text" style="font-size: 80px">30</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-8">
+                                <h5 class="card-title">Unreturned Records</h5>
+                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                            </div>
+                            <div class="col-sm-4 d-flex justify-content-center align-items-center">
+                                <h1 class="card-text" style="font-size: 80px">20</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br />
+        <br />
+        <hr />
+        <br />
+        <br />
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-8">
+                                <h5 class="card-title">Book Registered</h5>
+                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                            </div>
+                            <div class="col-sm-4 d-flex justify-content-center align-items-center">
+                                <h1 class="card-text" style="font-size: 80px">20</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-8">
+                                <h5 class="card-title">Issued Books</h5>
+                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                            </div>
+                            <div class="col-sm-4 d-flex justify-content-center align-items-center">
+                                <h1 class="card-text" style="font-size: 80px">30</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-8">
+                                <h5 class="card-title">Unreturned Books</h5>
+                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                            </div>
+                            <div class="col-sm-4 d-flex justify-content-center align-items-center">
+                                <h1 class="card-text" style="font-size: 80px">10</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
