--- a/LibrarrySystem/wwwroot/css/sidebar.css
+++ b/LibrarrySystem/wwwroot/css/sidebar.css
@@ -40,8 +40,8 @@
     margin-bottom: 10px;
 }
 
-.sidebar h4 {
-    color: #ccc;
-    margin-top: 0;
-    margin-bottom: 20px;
-}
+    .sidebar h6 {
+        color: #fff;
+        margin-top: 0;
+        margin-bottom: 20px;
+    }
