--- a/LibrarrySystem/Views/Home/Index.cshtml
+++ b/LibrarrySystem/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container mt-4">
+<div class="container">
 
     <div class="dashboard">
         <div class="row">
