--- a/LibrarrySystem/wwwroot/css/site.css
+++ b/LibrarrySystem/wwwroot/css/site.css
@@ -24,21 +24,26 @@ body {
         height: 100vh;
     }
 
-.main_content .header {
-            padding: 20px;
-            background: #fff;
-            color: #717171;
-            border-bottom: 1px solid #e0e4e8;
-        }
-
-    .main_content .header a {
+    .main_content .header {
+        padding: 20px;
         background: #fff;
         color: #717171;
-        font-size: 20px;
+        border-bottom: 1px solid #e0e4e8;
+        position: fixed;
+        height: 60px;
+        width: 83.5%;
     }
 
+        .main_content .header a {
+            background: #fff;
+            color: #2F323A;
+            font-size: 20px;
+            text-decoration: none;
+        }
+
 .body_container {
-    height: 83vh;
+    margin-top: 60px;
+    height: 84.5vh;
     transition: 0.5s;
     background-color: #fff;
 }
