--- a/LibrarrySystem/Views/Home/Index.cshtml
+++ b/LibrarrySystem/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-sm-8">
                                 <h5 class="card-title">Student Registered</h5>
-                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                                <a asp-action="Index" asp-controller="Students" class="btn dashbtn text-white mt-5">See more</a>
                             </div>
                             <div class="col-sm-4 d-flex justify-content-center align-items-center">
                                 <h1 class="card-text" style="font-size: 80px">40</h1>
@@ -27,7 +27,7 @@
                         <div class="row">
                             <div class="col-sm-8">
                                 <h5 class="card-title">Total Borrower</h5>
-                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                                <a asp-action="Index" asp-controller="Students" class="btn dashbtn text-white mt-5">See more</a>
                             </div>
                             <div class="col-sm-4 d-flex justify-content-center align-items-center">
                                 <h1 class="card-text" style="font-size: 80px">30</h1>
@@ -42,7 +42,7 @@
                         <div class="row">
                             <div class="col-sm-8">
                                 <h5 class="card-title">Unreturned Records</h5>
-                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                                <a asp-action="Index" asp-controller="Students" class="btn dashbtn text-white mt-5">See more</a>
                             </div>
                             <div class="col-sm-4 d-flex justify-content-center align-items-center">
                                 <h1 class="card-text" style="font-size: 80px">20</h1>
@@ -64,7 +64,7 @@
                         <div class="row">
                             <div class="col-sm-8">
                                 <h5 class="card-title">Book Registered</h5>
-                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                                <a asp-action="Index" asp-controller="Books" class="btn dashbtn text-white mt-5">See more</a>
                             </div>
                             <div class="col-sm-4 d-flex justify-content-center align-items-center">
                                 <h1 class="card-text" style="font-size: 80px">20</h1>
@@ -79,7 +79,7 @@
                         <div class="row">
                             <div class="col-sm-8">
                                 <h5 class="card-title">Issued Books</h5>
-                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                                <a asp-action="Index" asp-controller="Books" class="btn dashbtn text-white mt-5">See more</a>
                             </div>
                             <div class="col-sm-4 d-flex justify-content-center align-items-center">
                                 <h1 class="card-text" style="font-size: 80px">30</h1>
@@ -94,7 +94,7 @@
                         <div class="row">
                             <div class="col-sm-8">
                                 <h5 class="card-title">Unreturned Books</h5>
-                                <a href="#" class="btn dashbtn text-white mt-5">See more</a>
+                                <a asp-action="Index" asp-controller="Books" class="btn dashbtn text-white mt-5">See more</a>
                             </div>
                             <div class="col-sm-4 d-flex justify-content-center align-items-center">
                                 <h1 class="card-text" style="font-size: 80px">10</h1>
